fix the bug of align

--- a/project/src/main/webapp/css_files/base.css
+++ b/project/src/main/webapp/css_files/base.css
@@ -895,7 +895,7 @@ a:active {
 }
 
 .root61 .w {
-	width: 1210px;
+	width: 90%;
 }
 
 .lh {
@@ -1252,254 +1252,4 @@ img.err-price {
 
 #css-error {
 	display: none;
-}
-
-#product-track {
-	margin-top: 10px;
-	clear: both;
-}
-
-#product-track .nothing {
-	text-align: center;
-	margin-top: 100px;
-}
-
-#product-track .iloading {
-	margin-top: 100px;
-}
-
-#product-track .m2 h2 {
-	padding: 0 8px;
-	font: bold 14px/28px simsun;
-}
-
-#product-track .left .m2 .mt {
-	height: 28px;
-	line-height: 28px;
-	background:
-		url(http://misc.360buyimg.com/product/skin/2012/i/newicon20121106.png)
-		0 -287px repeat-x;
-	border-right: 0;
-	border-bottom: 1px solid #ccc;
-}
-
-#product-track .m2 {
-	border: 1px solid #CCC;
-}
-
-#product-track .left {
-	float: left;
-	width: 210px;
-	margin: 0;
-	padding: 0;
-}
-
-#product-track .right {
-	float: right;
-	margin: 0;
-	padding: 0;
-}
-
-#product-track .right {
-	width: 780px;
-}
-
-#product-track #maybe-like {
-	border-left: 0;
-}
-
-#recent-view-track .mc ul {
-	height: 250px;
-	overflow-y: auto;
-}
-
-#recent-view-track h2 {
-	float: left;
-	font-size: 14px;
-}
-
-#recent-view-track .extra {
-	float: right;
-	font-size: 12px;
-	margin-right: 10px;
-}
-
-#recent-view-track ul {
-	margin-top: -1px;
-	padding: 0 8px;
-}
-
-#recent-view-track li {
-	overflow: hidden;
-	border-top: 1px dotted #DEDEDE;
-	zoom: 1;
-}
-
-#recent-view-track .p-img {
-	float: left;
-	margin-right: 5px;
-	width: 50px;
-	height: 50px;
-	overflow: hidden;
-}
-
-#recent-view-track .p-name {
-	float: left;
-	width: 120px;
-	height: 3em;
-	margin-top: 5px;
-}
-
-#recent-view-track .p-price {
-	float: left;
-	width: 120px;
-}
-
-#recent-view-track .no-track {
-	margin: 10px;
-	height: 230px;
-	background: url(http://misc.360buyimg.com/product/skin/2012/i/foot.png)
-		left bottom no-repeat;
-	color: #999;
-}
-
-#recent-view-track .no-track p {
-	margin-top: 5px;
-	line-height: 1.5em;
-}
-
-#recent-view-track .no-track h4 {
-	font: 18px "microsoft yahei";
-}
-
-#maybe-like .mt {
-	height: 28px;
-	background:
-		url(http://misc.360buyimg.com/product/skin/2012/i/newicon20121106.png)
-		0 -287px repeat-x;
-	border-right: 0;
-	border-bottom: 1px solid #ccc;
-}
-
-#maybe-like h2 {
-	font-size: 14px;
-	float: left;
-}
-
-#maybe-like .extra {
-	float: right;
-	font: 12px/29px arial;
-	margin-right: 10px;
-}
-
-#maybe-like .extra span {
-	font-family: arial;
-	cursor: pointer;
-	margin: 5px 0 0 5px;
-	display: inline-block;
-	height: 16px;
-	line-height: 16px;
-	padding: 0 4px;
-	border-radius: 10px;
-	background: #999;
-	color: #fff;
-	*zoom: 1;
-}
-
-#maybe-like .extra .curr {
-	background: #d00;
-}
-
-#maybe-like .mc,#recent-view-track .mc {
-	height: 250px;
-	overflow: hidden;
-	position: relative;
-}
-
-#maybe-like .p-comm .star {
-	margin-top: 2px;
-}
-
-#maybe-like .star {
-	background-image:
-		url(http://misc.360buyimg.com/product/skin/2012/i/newicon20121106.png);
-	background-repeat: no-repeat;
-}
-
-#maybe-like .mc ul li {
-	width: 140px;
-	padding: 10px 20px;
-	text-align: center;
-}
-
-#maybe-like .mc .p-name {
-	height: 3em;
-}
-
-#maybe-like .p-price {
-	height: 16px;
-}
-
-#maybe-like #guess-scroll {
-	margin-left: 40px;
-}
-
-#maybe-like .disabled {
-	cursor: default;
-}
-
-#maybe-like .guess-control {
-	position: absolute;
-	z-index: 1;
-	left: 10px;
-	top: 70px;
-	display: block;
-	width: 21px;
-	height: 107px;
-	text-indent: -9999px;
-	overflow: hidden;
-	background:
-		url(http://misc.360buyimg.com/product/skin/2012/i/scroll.png) 0 0
-		no-repeat;
-	cursor: pointer;
-}
-
-#maybe-like #guess-backward {
-	background-position: -21px 0;
-	right: 10px;
-	left: auto;
-}
-
-#product-track .star {
-	display: inline-block;
-	width: 75px;
-	height: 14px;
-}
-
-#product-track .sa5 {
-	background-position: -109px -239px;
-}
-
-#product-track .sa4 {
-	background-position: -124px -239px;
-}
-
-#product-track .sa3 {
-	background-position: -139px -239px;
-}
-
-#product-track .sa2 {
-	background-position: -154px -239px;
-}
-
-#product-track .sa1 {
-	background-position: -169px -239px;
-}
-
-#product-track .sa0 {
-	background-position: -184px -239px;
-}
-
-.root61 #product-track .right {
-	width: 1000px;
 }
