--- a/project/src/main/webapp/css_files/index_cat.css
+++ b/project/src/main/webapp/css_files/index_cat.css
@@ -1,6 +1,6 @@
 body{
 	margin:auto;
-	width:72%;
+	/*width:72%;*/
 }
 
 td
